[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-toll"
version = "0.5.0"
description = "Lightweight drop-in Python decorator to track costs, monitor token usage, and enforce budget/rate limits for LLM API calls"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Felipe Morandini" }]
keywords = ["llm", "budget", "cost-tracking", "decorator", "openai", "anthropic", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.25"]
gemini = ["google-genai>=1.0"]
all = ["openai>=1.0", "anthropic>=0.25", "google-genai>=1.0"]

[project.urls]
Homepage = "https://github.com/felipemorandini/llm-toll"
Repository = "https://github.com/felipemorandini/llm-toll"
Issues = "https://github.com/felipemorandini/llm-toll/issues"

[project.scripts]
llm-toll = "llm_toll.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_toll"]

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["llm_toll"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["llm_toll"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
